# fscan

./: .gitignore  README.md  build.bat  config.yaml  fscan.ini  main.spec  pyproject.toml  setup.iss
app/: __init__.py  config.py  loggers.py  mainapplication.py  resources.py  richtexthandler.py  version.py
app/core/: naps2.py  process.py
app/core/naps2/: data.py  install.py  profile.py  scan.py
app/gui/: collectioncontrolgroup.py  configureprofilesdialog.py  consolewidget.py  darkpalette.py  initnaps2dialog.py  maincontrols.py  mainwidget.py  mainwindow.py  scancontrolgroup.py  workarea.py
app/state/: scan.py
