[tool.poetry]
name = "fscan"
version = "0.1.0"
description = ""
authors = ["Alex Forsythe <awforsythe@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyYAML = "^6.0"
colorama = "^0.4.4"
PySide6 = "^6.2.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
