[tool.poetry]
name = "fscan"
version = "0.1.0"
description = ""
authors = ["Alex Forsythe <awforsythe@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
colorama = "^0.4.4"
PySide6 = "^6.2.3"
requests = "^2.27.1"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
